# GramsRegimesTable

./: .gitignore  .prettierrc  .qmlls.ini  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  ConditionCell.qml  ConditionDelegateA.qml  ControlDelegate.qml  CycleCell.qml  GEMINI.md  MyTablePrototype.qml  ProtoTable.qml  README.md  RegimeDelegate.qml  RunTable.qml  ScrollArrow.qml  StateDelegate.qml  TimeProgressBar.qml  main.cpp  prototablemodel.cpp  prototablemodel.h  qtquickcontrols2.conf  regime.cpp  regime.h  regime_a.json  regime_a.md  regimemanager.cpp  regimemanager.h  resources.qrc  visibleregimemodel.cpp  visibleregimemodel.h
.github/workflows/: main.yml
docs/: Doxyfile  api.rst  build.sh  conf.py  index.rst
profile/: regime_a.json
qml/: Main.qml  Utils.js
tests/: CMakeLists.txt  test_prototablemodel.cpp  test_regimemanager.cpp  test_time_calculations.cpp
